# TanQtModule

./: LICENSE  README.md
CommonFileProcessor/: README.md
CommonFileProcessor/CommonFileProcessor/: CMakeLists.txt  CommonFileProcessor_global.h  commonfileprocessor.cpp  commonfileprocessor.h
